--- a/src/components/applicationpageview/applicationpage.css
+++ b/src/components/applicationpageview/applicationpage.css
@@ -1,14 +1,92 @@
 
 .applicationpage {
-    text-align: center;
-  }
-  
-  .applicationpage-header {
-    background-color: darkviolet;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
+  text-align: center;
+}
+
+.applicationpage-header {
+  background-color: darkviolet;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+#application {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#application-items {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+#application-inputs {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+#competencies {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+#availabilities {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+
+#competence-stuff {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#competenceInputs {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#competenceSelector {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+#yearsExperience {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#availability-stuff {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#availabilitySelect {
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#msgToUser {
+  color: red;
+}
