--- a/src/components/applicationpageview/applicationpage.css
+++ b/src/components/applicationpageview/applicationpage.css
@@ -18,12 +18,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #f0f0f0;
+  width: 80%;
+  margin:auto;
 }
 #application-items {
   display:flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width:100%;
 }
 #application-inputs {
   display:flex;
@@ -34,15 +38,21 @@
 #competencies {
   display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #e0e0e0;
+  height:100%;
+  min-width: 30%;
+  max-width: 50%;
   margin: 5px;
 }
 #availabilities {
+  height:100%;
   display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #e0e0e0;
+  align-items:center;
+  justify-content:flex-start;
+  min-width: 30%;
+  max-width: 50%;
   margin: 5px;
 }
 
@@ -51,6 +61,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 10px;
 }
 
 #competenceInputs {
@@ -78,6 +89,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 10px;
 }
 
 #availabilitySelect {
