work on update existing

--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -12,3 +12,9 @@
 input > .register-container {
     margin: 0px 20px;
 }
+
+.register-btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+}
